<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">HMCL-PE</string>
    <string name="app_full_name" translatable="false">Hello Minecraft! Launcher : Pocket Edition</string>
    <string name="app_name_pri" translatable="false">Hello Minecraft! Launcher</string>
    <string name="app_name_sec" translatable="false">Pocket Edition</string>
    <string name="version_name" translatable="false">v2.0.3</string>
    <string name="app_bar_title" translatable="false">Hello Minecraft! Launcher Pocket Edition v2.0.3</string>
    <string name="launcher_spinner_text" translatable="false">▲</string>
    <string name="dialog_add_offline_account_uuid" translatable="false">UUID</string>
    <string name="default_game_file_directory_list_pri_path" translatable="false">/storage/emulated/0/HMCLPE/.minecraft</string>
    <string name="default_game_file_directory_list_sec_path" translatable="false">/storage/emulated/0/Android/data/com.tungsten.hmclpe/files/.minecraft</string>
    <string name="export_package_type_ui_multimc" translatable="false">MultiMC</string>
    <string name="install_game_ui_minecraft" translatable="false">Minecraft</string>
    <string name="install_game_ui_forge" translatable="false">Forge</string>
    <string name="install_game_ui_liteloader" translatable="false">LiteLoader</string>
    <string name="install_game_ui_optifine" translatable="false">OptiFine</string>
    <string name="install_game_ui_fabric" translatable="false">Fabric</string>
    <string name="install_game_ui_fabric_api" translatable="false">Fabric API</string>
    <string name="install_game_ui_quilt" translatable="false">Quilt</string>
    <string name="install_game_ui_quilt_api" translatable="false">Quilt API</string>
    <string name="download_mod_source_curse_forge" translatable="false">CurseForge</string>
    <string name="download_mod_source_modrinth" translatable="false">Modrinth</string>
    <string name="download_resource_mcbbs" translatable="false">MCBBS</string>
    <string name="download_resource_curse_forge" translatable="false">CurseForge</string>
    <string name="download_resource_modrinth" translatable="false">Modrinth</string>
    <string name="game_setting_ui_ram" translatable="false">MB</string>
    <string name="game_setting_ui_game_launcher_boat" translatable="false">Boat</string>
    <string name="game_setting_ui_game_launcher_pojav" translatable="false">PojavLauncher</string>
    <string name="game_setting_ui_boat_renderer_gl4es_114" translatable="false">Holy GL4ES (OpenGL 2.1/3.2)</string>
    <string name="game_setting_ui_boat_renderer_virgl" translatable="false">VirGLRenderer (OpenGL 4.3)</string>
    <string name="game_setting_ui_pojav_renderer_gl4es_114" translatable="false">Holy GL4ES (OpenGL 2.1/3.2)</string>
    <string name="game_setting_ui_pojav_renderer_virgl" translatable="false">VirGLRenderer (OpenGL 4.3)</string>
    <string name="dialog_color_selector_arrow" translatable="false">→</string>
    <string name="download_setting_ui_source_bmclapi" translatable="false">BMCLAPI（bangbang93，https://bmclapi2.bangbang93.com/）</string>
    <string name="hiper_ui_about_base" translatable="false">Based on HiPer</string>
    <string name="ui_about_hmclpe_main" translatable="false">Hello Minecraft! Launcher : Pocket Edition</string>
    <string name="ui_about_hmclpe_sub" translatable="false">1.0.0</string>
    <string name="ui_about_tungsten_main" translatable="false">Tungsten</string>
    <string name="ui_about_shirosakimio_main" translatable="false">ShirosakiMio</string>
    <string name="ui_about_cosine_main" translatable="false">CosineMath</string>
    <string name="ui_about_legacy_main" translatable="false">LegacyGamerHD</string>
    <string name="ui_about_tsaltedfishking_main" translatable="false">TSaltedfishKing</string>
    <string name="ui_about_bangbang93_main" translatable="false">bangbang93</string>
    <string name="ui_about_community_discord" translatable="false">Discord</string>
    <string name="ui_about_open_source_statement" translatable="false">GPL v3 (https://github.com/huanghongxun/HMCL-PE-CN)</string>
    <string name="ui_about_libs_hmcl" translatable="false">HMCL</string>
    <string name="ui_about_libs_hmcl_sec" translatable="false">Copyright (c) 2022 huangyuhui.</string>
    <string name="ui_about_libs_hmcl_thi" translatable="false">Licensed under the GPL 3.</string>
    <string name="ui_about_libs_boat" translatable="false">Boat</string>
    <string name="ui_about_libs_boat_sec" translatable="false">Copyright (c) 2021 AOF-Dev.</string>
    <string name="ui_about_libs_boat_thi" translatable="false">Licensed under the GPL 2.</string>
    <string name="ui_about_libs_pojav" translatable="false">PojavLauncher</string>
    <string name="ui_about_libs_pojav_sec" translatable="false">Copyright (c) 2022 PojavLauncherTeam.</string>
    <string name="ui_about_libs_pojav_thi" translatable="false">Licensed under the GPL 3.</string>
    <string name="ui_about_libs_hin2n" translatable="false">Hin2n</string>
    <string name="ui_about_libs_hin2n_sec" translatable="false">Copyright (c) 2022 switch-iot.</string>
    <string name="ui_about_libs_hin2n_thi" translatable="false">Licensed under the GPL 3.</string>
    <string name="ui_about_libs_gson" translatable="false">Gson</string>
    <string name="ui_about_libs_gson_sec" translatable="false">Copyright 2008 Google Inc.</string>
    <string name="ui_about_libs_gson_thi" translatable="false">Licensed under the Apache 2.0 License.</string>
    <string name="ui_about_libs_theme" translatable="false">app-theme-engine</string>
    <string name="ui_about_libs_theme_sec" translatable="false">Copyright (c) 2016 naman14.</string>
    <string name="ui_about_libs_theme_thi" translatable="false">Licensed under the Apache 2.0 License.</string>
    <string name="ui_about_libs_okhttp" translatable="false">okhttp</string>
    <string name="ui_about_libs_okhttp_sec" translatable="false">Copyright (c) 2022 square.</string>
    <string name="ui_about_libs_okhttp_thi" translatable="false">Licensed under the Apache 2.0 License.</string>
    <string name="ui_about_libs_nano" translatable="false">nanohttpd</string>
    <string name="ui_about_libs_nano_sec" translatable="false">Copyright (c) 2016 NanoHttpd.</string>
    <string name="ui_about_libs_nano_thi" translatable="false">Licensed under the BSD-3 Clause License.</string>
    <string name="ui_about_libs_crash" translatable="false">CustomActivityOnCrash</string>
    <string name="ui_about_libs_crash_sec" translatable="false">Copyright (c) 2022 Ereza.</string>
    <string name="ui_about_libs_crash_thi" translatable="false">Licensed under the Apache 2.0 License.</string>
    <string name="ui_about_libs_commonc" translatable="false">commons-compress</string>
    <string name="ui_about_libs_commonc_sec" translatable="false">Copyright (c) 2022 apache.</string>
    <string name="ui_about_libs_commomc_thi" translatable="false">Licensed under the Apache 2.0 License.</string>
    <string name="ui_about_libs_commonl" translatable="false">commons-lang3</string>
    <string name="ui_about_libs_commonl_sec" translatable="false">Copyright (c) 2022 apache.</string>
    <string name="ui_about_libs_commonl_thi" translatable="false">Licensed under the Apache 2.0 License.</string>
    <string name="ui_about_libs_opennbt" translatable="false">OpenNBT</string>
    <string name="ui_about_libs_opennbt_sec" translatable="false">Copyright (c) 2013-2021 Steveice10.</string>
    <string name="ui_about_libs_opennbt_thi" translatable="false">Licensed under the MIT License.</string>
    <string name="ui_about_libs_color" translatable="false">ColorPicker</string>
    <string name="ui_about_libs_color_sec" translatable="false">Copyright (c) 2020 jaredrummler.</string>
    <string name="ui_about_libs_color_thi" translatable="false">Licensed under the Apache 2.0 License.</string>
    <string name="ui_about_libs_device" translatable="false">AndroidDeviceName</string>
    <string name="ui_about_libs_device_sec" translatable="false">Copyright (c) 2021 jaredrummler.</string>
    <string name="ui_about_libs_device_thi" translatable="false">Licensed under the Apache 2.0 License.</string>
    <string name="ui_about_libs_jsoup" translatable="false">jsoup</string>
    <string name="ui_about_libs_jsoup_sec" translatable="false">Copyright (c) 2022 jhy.</string>
    <string name="ui_about_libs_jsoup_thi" translatable="false">Licensed under the MIT License.</string>
    <string name="ui_about_libs_pool" translatable="false">Constant Pool Scanner</string>
    <string name="ui_about_libs_pool_sec" translatable="false">Copyright 1997-2010 Oracle and/or its affiliates.</string>
    <string name="ui_about_libs_pool_thi" translatable="false">Licensed under the GPL 2 or the CDDL.</string>
    <string name="contributor_heo_bino" translatable="false">Heo_Bino</string>
    <string name="contributor_stefma" translatable="false">Stefma</string>
    <string name="contributor_matheus" translatable="false">MatheusTGP</string>
    <string name="storage_permissions_remind">Please grant read and write permissions to the launcher, otherwise it may not operate normally</string>
    <string name="dialog_unknown_error_title">Warning</string>
    <string name="dialog_unknown_error_positive">Confirm</string>
    <string name="dialog_verify_title">Development version test permission verification</string>
    <string name="dialog_verify_msg">Please login first.</string>
    <string name="dialog_verify_logging">Logging in…</string>
    <string name="dialog_verify_msg_sec">Your device code is:\n%s</string>
    <string name="dialog_verify_donate">Get permission</string>
    <string name="dialog_verify_login">Login</string>
    <string name="dialog_verify_copy">Copy device code</string>
    <string name="dialog_verify_copy_success">Successfully copied device code</string>
    <string name="dialog_verify_login_success">Successfully logged in</string>
    <string name="dialog_verify_login_fail">Failed to login</string>
    <string name="dialog_verify_verify">Verify</string>
    <string name="dialog_verify_verifying">Verifying…</string>
    <string name="dialog_first_start_title">Welcome</string>
    <string name="dialog_first_start_msg">Welcome to HMCL-PE, this application attempts to implement the UI and features of HMCL on Android devices, but is not a fork of HMCL.\n\nBefore using, you need to read and agree to the User Agreement.</string>
    <string name="dialog_first_start_eula">EULA</string>
    <string name="dialog_first_start_positive">Agree and continue</string>
    <string name="dialog_offline_skin_title">Skin</string>
    <string name="dialog_offline_skin_confirm">OK</string>
    <string name="dialog_offline_skin_cancel">Cancel</string>
    <string name="download_minecraft_ui_hint">Information</string>
    <string name="download_minecraft_ui_hint_text">Downloads are provided by BMCLAPI and MCBBS. Click here for more information.</string>
    <string name="download_minecraft_ui_release">Releases</string>
    <string name="download_minecraft_ui_snapshot">Snapshots</string>
    <string name="download_minecraft_ui_old">Historical</string>
    <string name="install_package_ui_sub_title">Install a Modpack</string>
    <string name="install_package_ui_local">Import from local file</string>
    <string name="install_package_ui_local_sub">Select local file</string>
    <string name="install_package_ui_online">Download from the Internet</string>
    <string name="install_package_ui_online_sub">A direct download link to the remote modpack file is required</string>
    <string name="download_resource_mcmod">MCMOD</string>
    <string name="ui_help_doc">Hello Minecraft! Launcher Documentation</string>
    <string name="ui_help_doc_sub">Various guides are available.</string>
    <string name="doc_list_load_fail">Unable to fetch documentation list. Please click here to retry.</string>
</resources>