<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_width="450dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/colorPureBlack"
        android:text="@string/dialog_first_start_title"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPureBlack"
        android:textSize="@dimen/text_size_middle"
        android:text="@string/dialog_first_start_msg"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:minWidth="0dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/dialog_first_start_eula"
            android:textSize="15sp"
            android:textColor="@color/colorLinkBlue"
            android:background="@drawable/launcher_button_parent"
            android:id="@+id/eula"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:minWidth="0dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/dialog_first_start_positive"
            android:textSize="15sp"
            android:textColor="@color/colorLinkBlue"
            android:background="@drawable/launcher_button_parent"
            android:id="@+id/positive"/>

    </LinearLayout>

</LinearLayout>