<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/ui_install_package"
    android:background="@color/launcher_ui_background"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_middle"
                android:textColor="@color/colorPureBlack"
                android:text="@string/install_package_ui_sub_title"/>

            <LinearLayout
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/install_package_local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/launcher_button_white_blue"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_middle"
                        android:textColor="@color/colorPureBlack"
                        android:text="@string/install_package_ui_local"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_middle"
                        android:text="@string/install_package_ui_local_sub"/>

                </LinearLayout>

                <ImageView
                    android:layout_marginStart="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_arrow_forward_black"/>

            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/install_package_online"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/launcher_button_white_blue"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_middle"
                        android:textColor="@color/colorPureBlack"
                        android:text="@string/install_package_ui_online"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_middle"
                        android:text="@string/install_package_ui_online_sub"/>

                </LinearLayout>

                <ImageView
                    android:layout_marginStart="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_arrow_forward_black"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>