<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/ui_help"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@drawable/launcher_view_light_gray"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/ui_help_doc"
                android:textSize="14sp"
                android:textColor="@color/colorPureBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/ui_help_doc_sub"
                android:textSize="11sp" />

        </LinearLayout>

        <ImageButton
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_baseline_jump_black"
            android:id="@+id/hmclpe_doc_link"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:divider="@color/colorTransparent"
            android:dividerHeight="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/hmclpe_doc_list"/>

        <ProgressBar
            android:tag="tint_accent_color"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:id="@+id/loading_hmclpe_doc_list_progress"/>

        <TextView
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorLinkBlue"
            android:textSize="22sp"
            android:text="@string/doc_list_load_fail"
            android:id="@+id/refresh_doc_list"/>

    </RelativeLayout>

</LinearLayout>