<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="@drawable/launcher_view_white"
    android:id="@+id/dialog_offline_skin"
    android:visibility="gone"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_offline_skin_title"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/colorPureBlack"
            android:textStyle="bold"/>

        <android.opengl.GLSurfaceView
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/skin_gl_view"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:textSize="@dimen/text_size_middle"
                android:layout_weight="1"/>

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/dialog_offline_skin_confirm"
                android:textSize="15sp"
                android:textColor="@color/colorLinkBlue"
                android:background="@drawable/launcher_button_parent"
                android:id="@+id/edit_skin_positive"/>

            <Button
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/dialog_offline_skin_cancel"
                android:textSize="15sp"
                android:textColor="@color/colorPureBlack"
                android:background="@drawable/launcher_button_parent"
                android:id="@+id/cancel_edit_skin"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>