<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:visibility="invisible"
    android:padding="10dp"
    android:background="@color/launcher_ui_background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/launcher_button_light_gray"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/resource_icon"
            android:src="@drawable/launcher_background_color_white"
            android:layout_gravity="center"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:scaleType="centerInside"/>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/colorPureBlack"
                    android:id="@+id/resource_name"/>

                <TextView
                    android:tag="text_primary_color"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/resource_type"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="12sp"
                android:id="@+id/resource_description"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:id="@+id/mcmod_link"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_jump_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorLinkBlue"
                android:text="@string/download_resource_mcmod"
                android:layout_marginStart="7dp"
                android:textSize="@dimen/text_size_middle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:id="@+id/mcbbs_link"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_jump_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorLinkBlue"
                android:text="@string/download_resource_mcbbs"
                android:layout_marginStart="7dp"
                android:textSize="@dimen/text_size_middle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:id="@+id/curse_forge_link"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_jump_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorLinkBlue"
                android:text="@string/download_resource_curse_forge"
                android:layout_marginStart="7dp"
                android:textSize="@dimen/text_size_middle"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>